Been long enough

--- a/RL_practice/RL_practice_notebook.ipynb
+++ b/RL_practice/RL_practice_notebook.ipynb
@@ -2,145 +2,83 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import gymnasium as gym\n",
     "from tqdm import tqdm\n",
-    "from RL_practice_stuff import Agent\n",
+    "import matplotlib.pyplot as plt\n",
+    "import random\n",
+    "import wandb\n",
     "\n",
-    "env = gym.make(\"LunarLander-v3\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "state_space_size = len(env.observation_space.high)\n",
-    "action_space_size = env.action_space.n\n",
-    "agent = Agent(\n",
-    "    state_space_size, \n",
-    "    action_space_size, \n",
-    "    batch_size=2, \n",
-    "    train_every_n_iters=2\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "env = gym.make(\"LunarLander-v3\")\n",
+    "import os\n",
+    "os.environ[\"WANDB_LIVE_MODE\"] = \"true\"\n",
+    "os.environ[\"WANDB_SYNC_INTERVAL\"] = \"1\"\n",
+    "os.environ[\"WANDB_DISABLE_LOG_COMPRESSION\"] = \"true\"\n",
     "hyper_parameters = {\n",
     "    \"state_space_size\": len(env.observation_space.high),\n",
     "    \"action_space_size\": env.action_space.n, \n",
     "    \"batch_size\": 2, \n",
     "    \"train_every_n_iters\": 2,\n",
-    "    \"total_episodes\": 500,\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "agent = Agent(**hyper_parameters)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'total_episodes': 500}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "agent.kwargs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    \"total_episodes\": 10000,\n",
+    "}\n",
+    "try:\n",
+    "    del Agent\n",
+    "except NameError as e:\n",
+    "    pass\n",
+    "finally:\n",
+    "    from simple_agent import Agent\n",
+    "\n",
+    "wandb.init(project=\"RL Practice\", name=\"Lunar Landar Tests\")\n",
+    "agent = Agent(**{\"wandb_stuff\": wandb}, **hyper_parameters)\n",
+    "\n",
+    "env.close()\n",
+    "env = gym.make(\"LunarLander-v3\")\n",
     "reward_full = []\n",
-    "mode = 'train'\n",
-    "agent.start_clock(mode)\n",
+    "min_epsilon = 0.01\n",
+    "epsilon_decay = 0.995\n",
+    "epsilon = 1\n",
     "for ep in tqdm(range(hyper_parameters['total_episodes'])):\n",
-    "# for ep in range(total_episodes):\n",
     "    state, _ = env.reset()\n",
     "    terminated, truncated = False, False\n",
     "    rewards_ep = []\n",
+    "    reward_stuff = 1\n",
     "    while not (terminated or truncated):\n",
     "        action = agent.get_action(state)\n",
+    "        if random.random() < epsilon:\n",
+    "            action = random.randint(0, 3)\n",
     "        next_state, reward, terminated, truncated, info = env.step(action)\n",
+    "        # reward_stuff = reward_stuff * 1.008\n",
+    "        # reward -= reward_stuff / 1000\n",
     "        agent.step(state, action, reward, next_state, (terminated or truncated))\n",
     "        rewards_ep.append(reward)\n",
-    "\n",
     "        state = next_state\n",
+    "\n",
     "    agent.train_models()\n",
-    "    \n",
     "    reward_full.append(rewards_ep)\n",
+    "    epsilon = max(min_epsilon, epsilon * epsilon_decay)\n",
+    "\n",
+    "    wandb.log({\"epoch\": ep, \"Ave Reward\": (sum(rewards_ep)/len(rewards_ep))}, commit=True)\n",
     "\n",
     "env.close()\n",
-    "agent.stop_clock(mode)\n",
-    "print(f\"Training time (ms): {(agent.tot_time_train * 1000): .2f}\")\n",
-    "print(f\"Training time (min): {(agent.tot_time_train / 60): .2f}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test = Agent(8, 3)\n",
-    "test.start_clock('test')\n",
-    "for i in range(1000):\n",
-    "    pass\n",
-    "test.stop_clock('test')\n",
-    "test.tot_time_test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "agent.training_iter"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "want_visual = False\n",
+    "wandb.finish()\n",
+    "# plt.figure(figsize=(24, 6))\n",
+    "\n",
+    "# plt.plot([sum(reward) / len(reward) for reward in reward_full], label=\"average\")\n",
+    "# plt.plot([sorted(reward)[int(len(reward)/4)] for reward in reward_full], label='25%')\n",
+    "# plt.plot([sorted(reward)[int(len(reward)/2)] for reward in reward_full], label='50%')\n",
+    "# plt.plot([sorted(reward)[int(len(reward)*3/4)] for reward in reward_full], label='75%')\n",
+    "# plt.legend()\n",
+    "# plt.show()\n",
+    "want_visual = True\n",
     "if want_visual:\n",
     "    env = gym.make('LunarLander-v3', render_mode='human')\n",
     "else:\n",
     "    env = gym.make('LunarLander-v3')\n",
     "\n",
     "test_episodes = 10\n",
-    "agent.start_clock('test')\n",
     "test_rewards = []\n",
     "for ep in range(test_episodes):\n",
     "    state, _ = env.reset()\n",
@@ -154,14 +92,13 @@
     "            break\n",
     "        state = nxt_stp\n",
     "    test_rewards.append(ep_rewards[-1])\n",
-    "agent.stop_clock('test')\n",
     "\n",
-    "env.close()\n",
-    "print(f\"Testing time: {(agent.tot_time_test * 1000): .2f}\")\n",
-    "agent.save_models(\n",
-    "    test_scores=test_rewards, \n",
-    "    reward_full=reward_full\n",
-    ")"
+    "tot_rewards = [sum(rewa) for rewa in test_rewards]\n",
+    "ave_tot_rewards = sum(tot_rewards) / len(tot_rewards)\n",
+    "\n",
+    "agent.save_models(ave_tot_rewards)\n",
+    "\n",
+    "env.close()\n"
    ]
   }
  ],
